--- a/src/app/app.html
+++ b/src/app/app.html
@@ -35,6 +35,15 @@
       </ul>
       <!-- Contenedor para los íconos sociales -->
       <div class="right-container">
+        <div id="toggle-language" style="cursor: pointer">
+          <img
+            id="flag-icon"
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/Flag_of_Mexico.svg/24px-Flag_of_Mexico.svg.png"
+            alt="Bandera de México"
+            width="24"
+            height="16"
+          />
+        </div>
         <!-- Íconos sociales alineados a la derecha -->
         <ul class="nav-right">
           <li>
