--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+    <!-- Contenedor de carga -->
+    <div id="loading-overlay" class="loading-overlay">
+      <div class="loading-spinner"></div>
+    </div>
+
     <!-- Barra de navegación -->
     <nav class="navbar">
       <!-- Contenedor para el ícono del menú y el logo -->
@@ -35,6 +40,7 @@
       </ul>
       <!-- Contenedor para los íconos sociales -->
       <div class="right-container">
+        <!-- Botón para cambiar idioma -->
         <div id="toggle-language" style="cursor: pointer">
           <img
             id="flag-icon"
