--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,4 @@
 @import url("./components/styles/about.css");
 @import url("./components/styles/projects.css");
 @import url("./components/styles/footer.css");
+@import url("./components/styles/loading.css");
