--- a/src/app/app.html
+++ b/src/app/app.html
@@ -16,71 +16,42 @@
 
     <!-- Barra de navegación -->
     <nav class="navbar">
-      <!-- Contenedor para el ícono del menú y el logo -->
       <div class="left-container">
-        <!-- Ícono de menú en dispositivos móviles -->
-        <div class="menu-icon" id="menu-icon">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </div>
-        <!-- Logo -->
-        <div class="logo">
-          <a href="#">
-            <img src="../assets/icons/icon.png" alt="Logo" class="logo-image" />
-          </a>
-        </div>
+          <div class="menu-icon" id="menu-icon">
+              <span class="bar"></span>
+              <span class="bar"></span>
+              <span class="bar"></span>
+          </div>
+          <div class="logo">
+              <a href="#">
+                  <img src="../assets/icons/icon.png" alt="Logo" class="logo-image">
+              </a>
+          </div>
       </div>
-      <!-- Enlaces de navegación -->
       <ul class="nav-left" id="nav-left">
-        <li><a id="nav-about" href="#about">Sobre mí</a></li>
-        <li><a id="nav-contact" href="#available">Contactar</a></li>
-        <li><a id="nav-skills" href="#skills">Habilidades</a></li>
-        <li><a id="nav-projects" href="#projects">Ir a proyectos</a></li>
+          <li><a id="nav-about" href="#about">Sobre mí</a></li>
+          <li><a id="nav-contact" href="#available">Contactar</a></li>
+          <li><a id="nav-skills" href="#skills">Habilidades</a></li>
+          <li><a id="nav-projects" href="#projects">Ir a proyectos</a></li>
       </ul>
-      <!-- Contenedor para los íconos sociales -->
       <div class="right-container">
-        <!-- Botón para cambiar idioma -->
-        <div id="toggle-language" style="cursor: pointer">
-          <img
-            id="flag-icon"
-            src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/Flag_of_Mexico.svg/24px-Flag_of_Mexico.svg.png"
-            alt="Bandera de México"
-            width="24"
-            height="16"
-          />
-        </div>
-        <!-- Íconos sociales alineados a la derecha -->
-        <ul class="nav-right">
-          <li>
-            <a
-              href="https://www.linkedin.com/in/miguelacarlos/"
-              target="_blank"
-              aria-label="LinkedIn"
-            >
-              <img
-                src="https://cdn-icons-png.flaticon.com/512/145/145807.png"
-                alt="LinkedIn"
-                class="social-icon"
-              />
-            </a>
-          </li>
-          <li>
-            <a
-              href="https://github.com/MiguelCarlosRojas"
-              target="_blank"
-              aria-label="GitHub"
-            >
-              <img
-                src="https://cdn-icons-png.flaticon.com/512/733/733609.png"
-                alt="GitHub"
-                class="social-icon"
-              />
-            </a>
-          </li>
-        </ul>
+          <div id="toggle-language" style="cursor: pointer">
+              <img id="flag-icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/Flag_of_Mexico.svg/24px-Flag_of_Mexico.svg.png" alt="Bandera de México" width="24" height="16">
+          </div>
+          <ul class="nav-right">
+              <li>
+                  <a href="https://www.linkedin.com/in/miguelacarlos/" target="_blank" aria-label="LinkedIn">
+                      <img src="https://cdn-icons-png.flaticon.com/512/145/145807.png" alt="LinkedIn" class="social-icon">
+                  </a>
+              </li>
+              <li>
+                  <a href="https://github.com/MiguelCarlosRojas" target="_blank" aria-label="GitHub">
+                      <img src="https://cdn-icons-png.flaticon.com/512/733/733609.png" alt="GitHub" class="social-icon">
+                  </a>
+              </li>
+          </ul>
       </div>
-    </nav>
+  </nav>
 
     <header class="header">
       <div class="header-content">
